# aoc25

./: .editorconfig  .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
inputs/: day02.txt  day06.txt
src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day1.rs  lib.rs  template.rs
