[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
